fixed login template

--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -39,9 +39,9 @@
                             {{form.submit}}
                         </form>
                     </div>
-                    <fieldset style="padding-bottom: 50px"class="account_related_pages border rounded border-dark px-2 col-sm-2.5">
+                    <fieldset style="height: 200px" class="related_pages border rounded border-dark px-2 col-sm-2.5">
                         <h6>
-                            ACCOUNT RELATED PAGES
+                            RELATED PAGES
                         </h6>
                         <a class="btn btn-outline-dark" href="/signup/">Create New Account?</a>
                         <br>
