updated home template

--- a/templates/pybin/home.html
+++ b/templates/pybin/home.html
@@ -33,6 +33,8 @@
                               class="codemirror-textarea"
                               style="height: 300px;
                                      width: 100%"></textarea>
+                    <h5>Optional Paste Settings</h5>
+                    <hr>
                     <div class="form_bottom d-flex">
                         <div class="form_left d-flex-inline">
                             <div>
@@ -91,9 +93,14 @@
                                                 <b>Guest</b>
                                             </div>
                                             <div class="form_sign">
-                                                <a class="btn btn-outline-dark" href="/signup/">Sign Up</a>
-                                                or
-                                                <a class="btn btn-outline-dark" href="/login/">Login</a>
+                                                <div class="form_user">
+                                                    <a class="btn btn-outline-dark" href="/signup/">Sign Up</a>
+                                                    or
+                                                    <a class="btn btn-outline-dark" href="/login/">Login</a>
+                                                </div>
+                                                <div class="form_social_auth py-2">
+                                                    <a class="btn btn-outline-danger px-3" href="/site/auth-google/">Sign in with Google</a>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
