added captcha checking

--- a/templates/pybin/password.html
+++ b/templates/pybin/password.html
@@ -42,7 +42,10 @@
                                 {{ form.password_confirm.label }}
                                 {{ form.password_confirm(placeholder="Your new password again") }}
                             </div>
-                            {{ form.recaptcha }}
+                            <div>
+                                {{ form.captcha }}
+                                <img src="{{url_for('auth.captcha')}}" width="120" height="30">
+                            </div>
                             {{ form.submit }}
                         </form>
                     </div>
