--- a/templates/authentication/resend.html
+++ b/templates/authentication/resend.html
@@ -19,13 +19,20 @@
                 </div>
                 <form method="POST" action="/resend/">
                     {{ form.csrf_token }}
+                    
+                    <div class="captcha-form">
+                        <div class="col-sm-9">
+                            {{ form.captcha }}
+                            <img src="{{url_for('auth.captcha')}}" width="120" height="30">
+                        </div>
+                    </div>
+                    <div class="btn-container">
+                        {{ form.submit }}
+                    </div>
 
                     {% if not current_user.is_authenticated %}
                         {{ form.username }}
                     {% endif %}
-
-                    {{ form.recaptcha }}
-                    {{ form.submit }}
                 </form>
             </div>
             <div class="sidebar col-sm-3">
