--- a/templates/pybin/password.html
+++ b/templates/pybin/password.html
@@ -44,7 +44,8 @@
                             </div>
                             <div>
                                 {{ form.captcha }}
-                                <img src="{{url_for('auth.captcha')}}" width="120" height="30">
+                                <img class="captcha-image" src="{{url_for('auth.captcha')}}" width="120" height="30">
+                                <a class="captcha-reload btn col-sm-1"><img src="{{url_for('static', filename='img/refresh.png')}}" width="16" height="16"></a>
                             </div>
                             {{ form.submit }}
                         </form>
@@ -116,4 +117,7 @@
             </div>
         </div>
     </div>
+{% endblock %}
+{% block scripts %}
+    <script src="{{url_for('static', filename='js/captcha-reload.js')}}"></script>
 {% endblock %}
