--- a/templates/authentication/signup.html
+++ b/templates/authentication/signup.html
@@ -42,7 +42,8 @@
                             <div class="mb-3 row">
                                 <label class="col-sm-2 col-form-label"></label>
                                 <p class="input-sm col-sm-3">{{form.captcha}}</p>
-                                <img class="col-sm-3" src="{{url_for('auth.captcha')}}" width="120" height="30">
+                                <img class="captcha-image col-sm-3" src="{{url_for('auth.captcha')}}" width="120" height="30">
+                                <a class="captcha-reload btn col-sm-1"><img src="{{url_for('static', filename='img/refresh.png')}}" width="16" height="16"></a>
                             </div>
                             <div class="mb-3 row">
                                 <label class="col-sm-2 col-form-label"></label>
@@ -126,4 +127,5 @@
     </div>
 {% endblock %}
 {% block scripts %}
+    <script src="{{url_for('static', filename='js/captcha-reload.js')}}"></script>
 {% endblock %}
