--- a/templates/authentication/signup_from_social_media.html
+++ b/templates/authentication/signup_from_social_media.html
@@ -17,7 +17,7 @@
             </div>
             <form method="POST" action="/site/signup-from-social-media/">
                 {{ form.csrf_token }}
-                {{ form.username }}
+                {{ form.username(placeholder="Your username") }}
                 <ul>
                     {% for error in form.username.errors %}<li style="color:red;">{{ error }}</li>{% endfor %}
                 </ul>
