--- a/templates/pybin/avatar.html
+++ b/templates/pybin/avatar.html
@@ -16,6 +16,10 @@
                     Change Your Avatar
                     <hr>
                 </div>
+                <div class="info">
+                    <i class="fa fa-info-circle" aria-hidden="true"></i>
+                    To update your avatar, select a valid JPG or PNG image. We will automatically resize the image for you. 
+                </div>
                 <div class="user_page d-flex">
                     <div class="form_frame_left col-sm-6">
                         <form method="POST"
