--- a/templates/pybin/password.html
+++ b/templates/pybin/password.html
@@ -7,6 +7,9 @@
                 {% if form.password.errors %}
                     {% for error in form.password.errors %}{{ error }}{% endfor %}
                 {% endif %}
+                {% if form.password_confirm.errors %}
+                    {% for error in form.password_confirm.errors %}{{ error }}{% endfor %}
+                {% endif %}
                 {% with messages = get_flashed_messages() %}
                     {% if messages %}<div class="notification is-danger">{{ messages[0] }}</div>{% endif %}
                 {% endwith %}
@@ -43,7 +46,7 @@
                                 {{ form.password_confirm(placeholder="Your new password again") }}
                             </div>
                             <div>
-                                {{ form.captcha }}
+                                {{ form.captcha(placeholder="Enter captcha") }}
                                 <img class="captcha-image" src="{{url_for('auth.captcha')}}" width="120" height="30">
                                 <a class="captcha-reload btn col-sm-1"><img src="{{url_for('static', filename='img/refresh.png')}}" width="16" height="16"></a>
                             </div>
