--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -30,13 +30,22 @@
                             {{form.csrf_token}}
                             <div class="mb-3 row">
                                 <label class="col-sm-2 col-form-label">{{form.username.label}}</label>
-                                <p class="col-sm-10">{{form.username}}</p>
+                                <p class="col-sm-10">{{form.username(placeholder="Your username")}}</p>
+                                <ul class="errors">
+                                    {% for error in form.username.errors %}<li style="color:red;">{{ error }}</li>{% endfor %}
+                                </ul>
                             </div>
                             <div class="mb-3 row">
                                 <label class="col-sm-2 col-form-label">{{form.password.label}}</label>
-                                <p class="col-sm-8">{{form.password}}</p>
+                                <p class="col-sm-8">{{form.password(placeholder="Your password")}}</p>
+                                <ul class="errors">
+                                    {% for error in form.password.errors %}<li style="color:red;">{{ error }}</li>{% endfor %}
+                                </ul>
                             </div>
-                            {{form.submit}}
+                            <div class="mb-3 row">
+                                <label class="col-sm-2 col-form-label"></label>
+                                <p class="col-sm-8">{{form.submit}}</p>
+                            </div>
                         </form>
                     </div>
                     <fieldset style="height: 200px" class="related_pages border rounded border-dark px-2 col-sm-2.5">
