reformatted authentication.models

--- a/templates/pybin/edit_profile.html
+++ b/templates/pybin/edit_profile.html
@@ -34,7 +34,7 @@
                             </div>
                             <div>
                                 Email Status:
-                                {% if current_user.email_status %}
+                                {% if current_user.email_verified %}
                                     verified!
                                 {% else %}
                                     Not verified! We have sent you an email <div>[ <a href="/resend/"> resend verification email</a> ]</div>
